app/openwebui/litellm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: openwebui
spec:
  type: NodePort
  selector:
    app: litellm
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 31400
