app/openwebui/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  type: NodePort 
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8080
      nodePort: 31042
